<resources>
    <string name="app_name">Birthday Reminder</string>
    <string name="date_of_birth">date of birth</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="text_view">Text View</string>
    <string name="wish_list_labek">Birthday wish list for:</string>
    <string name="back_btn_label">BACK</string>
    <integer name="com_vk_sdk_AppId">7425546</integer>
    <string name="action_settings">Settings</string>
    <string name="action_share">Clear</string>
    <string name="action_exit">Logout</string>
    <string name="year_option_button">Don\'t show year</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="close_btn_label">CLOSE</string>
</resources>
