<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addNameLocalInput"
        android:layout_width="367dp"
        android:layout_height="51dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/name"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="153dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addSurnameLocalInput"
        android:layout_width="362dp"
        android:layout_height="55dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/surname"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="219dp"

        />

    <TextView
        android:id="@+id/viewDate"
        android:layout_width="132dp"
        android:layout_height="51dp"
        android:gravity="center_horizontal|center_vertical"
        android:hint="01.01.2000"
        android:padding="5dp"
        android:textAlignment="gravity"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="310dp" />

    <Switch
        android:id="@+id/switch_year"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/year_option_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/selectDate"
            android:layout_width="194dp"
            android:layout_height="match_parent"
            android:text="Select Date"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="376dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddLocalUser"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="80dp"
            app:srcCompat="@drawable/addicon" />


    </LinearLayout>


</LinearLayout>
